Replace certificate status with certificate state and validation status (#587)